--- a/文档/安徽电信-流量来啦-每日必点.md
+++ b/文档/安徽电信-流量来啦-每日必点.md
@@ -13,23 +13,23 @@
 > 每日必点 四大活动-免费发红包、签到有礼、勤劳津贴、任务勋章
 
 
-![1]( https://md.xushufa.cn/gitimg/document/imgs/TelecomTraffic2/1.jpg )
+![1]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic2/1.jpg )
 
 ---
 
-![2]( https://md.xushufa.cn/gitimg/document/imgs/TelecomTraffic2/2.jpg )
+![2]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic2/2.jpg )
 
 ---
 
-![3]( https://md.xushufa.cn/gitimg/document/imgs/TelecomTraffic2/3.jpg )
+![3]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic2/3.jpg )
 
 ---
 
-![4]( https://md.xushufa.cn/gitimg/document/imgs/TelecomTraffic2/4.jpg )
+![4]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic2/4.jpg )
 
 ---
 
-![5]( https://md.xushufa.cn/gitimg/document/imgs/TelecomTraffic2/5.jpg )
+![5]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic2/5.jpg )
 
 ---
 
@@ -37,21 +37,21 @@
 
 ---
 
-![6]( https://md.xushufa.cn/gitimg/document/imgs/TelecomTraffic2/6.jpg )
+![6]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic2/6.jpg )
 
 ---
 
-![7]( https://md.xushufa.cn/gitimg/document/imgs/TelecomTraffic2/7.jpg )
+![7]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic2/7.jpg )
 
 ---
 
 ## 附录
 
-若想分享电信流量福袋福包及交流关于流量问题可加入本群：[流量群]( https://md.xushufa.cn/gitimg/document/imgs/TelecomTraffic/wxgGroup.jpg )。
+若想分享电信流量福袋福包及交流关于流量问题可加入本群：[流量群]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/TelecomTraffic/wxgGroup.jpg )。
 
 若邀请过期或者有更多问题，可关注本人公众号，微信搜索【无为徐生】或扫描下方二维码。
 回复【安徽电信群】即可获取最新入群二维码。
-![无为徐生]( https://md.xushufa.cn/gitimg/document/imgs/weixin/wuweixusheng.png )
+![无为徐生]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/weixin/wuweixusheng.png )
 
 
 
