--- a/文档/治疗失眠无限循环的有趣动图.md
+++ b/文档/治疗失眠无限循环的有趣动图.md
@@ -1,71 +1,71 @@
 # 治疗失眠无限循环的有趣动图
 
 
-![hello]( https://md.xushufa.cn/gitimg/document/imgs/dongtu/hello.svg )
+![hello]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/dongtu/hello.svg )
 
 ---
 
 ## 彩色
 
-![b3e6bb65gw1ezpt8linb8g20c807pk44]( https://md.xushufa.cn/gitimg/document/imgs/dongtu/b3e6bb65gw1ezpt8linb8g20c807pk44.gif )
+![b3e6bb65gw1ezpt8linb8g20c807pk44]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/dongtu/b3e6bb65gw1ezpt8linb8g20c807pk44.gif )
 
 ---
 
-![b3e6bb65gw1ezpt8rfu3pg20c807pdty]( https://md.xushufa.cn/gitimg/document/imgs/dongtu/b3e6bb65gw1ezpt8rfu3pg20c807pdty.gif )
+![b3e6bb65gw1ezpt8rfu3pg20c807pdty]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/dongtu/b3e6bb65gw1ezpt8rfu3pg20c807pdty.gif )
 
 ---
 
-![b3e6bb65gw1ezpt8oa3brg20c807p17f]( https://md.xushufa.cn/gitimg/document/imgs/dongtu/b3e6bb65gw1ezpt8oa3brg20c807p17f.gif )
+![b3e6bb65gw1ezpt8oa3brg20c807p17f]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/dongtu/b3e6bb65gw1ezpt8oa3brg20c807p17f.gif )
 
 ---
 
-![b3e6bb65gw1ezpt8niigjg20c807p1hw]( https://md.xushufa.cn/gitimg/document/imgs/dongtu/b3e6bb65gw1ezpt8niigjg20c807p1hw.gif )
+![b3e6bb65gw1ezpt8niigjg20c807p1hw]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/dongtu/b3e6bb65gw1ezpt8niigjg20c807p1hw.gif )
 
 ---
 
 
-![b3e6bb65gw1ezpt8uhnypg20c807pkjl]( https://md.xushufa.cn/gitimg/document/imgs/dongtu/b3e6bb65gw1ezpt8uhnypg20c807pkjl.gif )
+![b3e6bb65gw1ezpt8uhnypg20c807pkjl]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/dongtu/b3e6bb65gw1ezpt8uhnypg20c807pkjl.gif )
 
 ---
 
-![b3e6bb65gw1ezpt8qlhmtg20c807p7wh]( https://md.xushufa.cn/gitimg/document/imgs/dongtu/b3e6bb65gw1ezpt8qlhmtg20c807p7wh.gif )
+![b3e6bb65gw1ezpt8qlhmtg20c807p7wh]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/dongtu/b3e6bb65gw1ezpt8qlhmtg20c807p7wh.gif )
 
 ---
 
 ---
 
-![b3e6bb65gw1ezpt8lu2c5g208c08c7bz]( https://md.xushufa.cn/gitimg/document/imgs/dongtu/b3e6bb65gw1ezpt8lu2c5g208c08c7bz.gif )
+![b3e6bb65gw1ezpt8lu2c5g208c08c7bz]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/dongtu/b3e6bb65gw1ezpt8lu2c5g208c08c7bz.gif )
 
 ---
 
-![b3e6bb65gw1ezpt8ksk3xg208c08cgse]( https://md.xushufa.cn/gitimg/document/imgs/dongtu/b3e6bb65gw1ezpt8ksk3xg208c08cgse.gif )
+![b3e6bb65gw1ezpt8ksk3xg208c08cgse]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/dongtu/b3e6bb65gw1ezpt8ksk3xg208c08cgse.gif )
 
 ---
 
-![b3e6bb65gw1ezpt8v6yj1g208c08cn5s]( https://md.xushufa.cn/gitimg/document/imgs/dongtu/b3e6bb65gw1ezpt8v6yj1g208c08cn5s.gif )
+![b3e6bb65gw1ezpt8v6yj1g208c08cn5s]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/dongtu/b3e6bb65gw1ezpt8v6yj1g208c08cn5s.gif )
 
 ---
 
 ## 黑白
 
-![e6a24dae4867402db53da6c810792a24]( https://md.xushufa.cn/gitimg/document/imgs/dongtu/e6a24dae4867402db53da6c810792a24.gif )
+![e6a24dae4867402db53da6c810792a24]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/dongtu/e6a24dae4867402db53da6c810792a24.gif )
 
 ---
 
-![9c63371866f2424cacaef84486f1fb33]( https://md.xushufa.cn/gitimg/document/imgs/dongtu/9c63371866f2424cacaef84486f1fb33.gif )
+![9c63371866f2424cacaef84486f1fb33]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/dongtu/9c63371866f2424cacaef84486f1fb33.gif )
 
 ---
 
-![982088b82ee041378263c7a9167eb897]( https://md.xushufa.cn/gitimg/document/imgs/dongtu/982088b82ee041378263c7a9167eb897.gif )
+![982088b82ee041378263c7a9167eb897]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/dongtu/982088b82ee041378263c7a9167eb897.gif )
 
 ---
 
-![957168434847446b82e909407c0752aa]( https://md.xushufa.cn/gitimg/document/imgs/dongtu/957168434847446b82e909407c0752aa.gif )
+![957168434847446b82e909407c0752aa]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/dongtu/957168434847446b82e909407c0752aa.gif )
 
 ---
 
 
-![ddd039526f894bf3a7b452a9ca68479f]( https://md.xushufa.cn/gitimg/document/imgs/dongtu/ddd039526f894bf3a7b452a9ca68479f.gif )
+![ddd039526f894bf3a7b452a9ca68479f]( https://bitbucket.org/xu12345/document/raw/114a5f5c292cc412cd46304dc1d20cfda7c7a7f8/imgs/dongtu/ddd039526f894bf3a7b452a9ca68479f.gif )
 
 ---
 
